Update and French comments to a better understanding

--- a/tutorials/circuits_advanced/01.01_advanced_circuits.ipynb
+++ b/tutorials/circuits_advanced/01.01_advanced_circuits.ipynb
@@ -43,13 +43,53 @@
     "#CRÉATION D'UNE NOUVELLE PORTE\n",
     "my_gate = Gate(name='my_gate', num_qubits=2, params=[])\n",
     "\n",
+    "#un registre quantique permet de créer 3 qbit d'input, à quoi sert le 'q' ? \n",
     "qr = QuantumRegister(3, 'q')\n",
+    "#création d'un circuit quantique\n",
     "circ = QuantumCircuit(qr)\n",
+    "#ajout de deux portes\n",
     "circ.append(my_gate, [qr[0], qr[1]])\n",
     "circ.append(my_gate, [qr[1], qr[2]])\n",
     "\n",
-    "circ.draw()\n",
-    "\n"
+    "circ.draw()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"Composite Gates\"\n",
+    "#qu'est ce que ça pourrait être ? \n",
+    "\n",
+    "# Build a sub-circuit\n",
+    "#on créé un registre avec 2 entrées\n",
+    "sub_q = QuantumRegister(2)\n",
+    "#on créé le circuit quantique de base\n",
+    "sub_circ = QuantumCircuit(sub_q, name='sub_circ')\n",
+    "#on ajoute une porte h sur l'entrée 0\n",
+    "sub_circ.h(sub_q[0])\n",
+    "#on ajoute une porte crz sur |0> puis |1>, qu'est ce que c'est ?\n",
+    "sub_circ.crz(1, sub_q[0], sub_q[1])\n",
+    "#on ajoute une barrière ?\n",
+    "sub_circ.barrier()\n",
+    "#on ajoute un id ?\n",
+    "sub_circ.id(sub_q[1])\n",
+    "#on ajoute une porte u \n",
+    "sub_circ.u(1, 2, -2, sub_q[0])\n",
+    "\n",
+    "# Convert to a gate and stick it into an arbitrary place in the bigger circuit\n",
+    "sub_inst = sub_circ.to_instruction()\n",
+    "\n",
+    "qr = QuantumRegister(3, 'q')\n",
+    "circ = QuantumCircuit(qr)\n",
+    "circ.h(qr[0])\n",
+    "circ.cx(qr[0], qr[1])\n",
+    "circ.cx(qr[1], qr[2])\n",
+    "circ.append(sub_inst, [qr[1], qr[2]])\n",
+    "\n",
+    "circ.draw()\n"
    ]
   }
  ],
