I understand a bit better

--- a/tutorials/circuits_advanced/01.01_advanced_circuits.ipynb
+++ b/tutorials/circuits_advanced/01.01_advanced_circuits.ipynb
@@ -56,9 +56,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">     ┌───┐                       \n",
+       "q_0: ┤ H ├──■────────────────────\n",
+       "     └───┘┌─┴─┐     ┌───────────┐\n",
+       "q_1: ─────┤ X ├──■──┤0          ├\n",
+       "          └───┘┌─┴─┐│  sub_circ │\n",
+       "q_2: ──────────┤ X ├┤1          ├\n",
+       "               └───┘└───────────┘</pre>"
+      ],
+      "text/plain": [
+       "     ┌───┐                       \n",
+       "q_0: ┤ H ├──■────────────────────\n",
+       "     └───┘┌─┴─┐     ┌───────────┐\n",
+       "q_1: ─────┤ X ├──■──┤0          ├\n",
+       "          └───┘┌─┴─┐│  sub_circ │\n",
+       "q_2: ──────────┤ X ├┤1          ├\n",
+       "               └───┘└───────────┘"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"Composite Gates\"\n",
     "#qu'est ce que ça pourrait être ? \n",
@@ -70,14 +96,29 @@
     "sub_circ = QuantumCircuit(sub_q, name='sub_circ')\n",
     "#on ajoute une porte h sur l'entrée 0\n",
     "sub_circ.h(sub_q[0])\n",
+    "\n",
+    "\n",
     "#on ajoute une porte crz sur |0> puis |1>, qu'est ce que c'est ?\n",
+    "\"\"\" theta: The angle of the rotation.\n",
+    "    control_qubit: The qubit(s) used as the control.\n",
+    "    target_qubit: The qubit(s) targeted by the gate.\n",
+    "    label: The string label of the gate in the circuit.\n",
+    "    ctrl_state: The control state in decimal, or as a bitstring (e.g. '1').  Defaults to controlling on the '1' state.\"\"\"\n",
+    "\n",
+    "#L'angle de rotation est 1 , le bit de contrôle est sub_q[0] , le bit cible est sub_q[1]\n",
     "sub_circ.crz(1, sub_q[0], sub_q[1])\n",
-    "#on ajoute une barrière ?\n",
-    "sub_circ.barrier()\n",
+    "\n",
+    "#on ajoute une barrière \n",
+    "#sub_circ.barrier()\n",
     "#on ajoute un id ?\n",
+    "\n",
+    "#on ajoute une porte identité\n",
     "sub_circ.id(sub_q[1])\n",
+    "\n",
     "#on ajoute une porte u \n",
     "sub_circ.u(1, 2, -2, sub_q[0])\n",
+    "\n",
+    "\n",
     "\n",
     "# Convert to a gate and stick it into an arbitrary place in the bigger circuit\n",
     "sub_inst = sub_circ.to_instruction()\n",
@@ -91,6 +132,13 @@
     "\n",
     "circ.draw()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
