--- a/tutorials/circuits_advanced/01.01_advanced_circuits.ipynb
+++ b/tutorials/circuits_advanced/01.01_advanced_circuits.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
        "               └───┘└───────────┘"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +108,7 @@
     "#L'angle de rotation est 1 , le bit de contrôle est sub_q[0] , le bit cible est sub_q[1]\n",
     "sub_circ.crz(1, sub_q[0], sub_q[1])\n",
     "\n",
-    "#on ajoute une barrière \n",
+    "#on ajoute une barrière #elle peut être vue dans la version décomposée \n",
     "#sub_circ.barrier()\n",
     "#on ajoute un id ?\n",
     "\n",
@@ -130,7 +130,43 @@
     "circ.cx(qr[1], qr[2])\n",
     "circ.append(sub_inst, [qr[1], qr[2]])\n",
     "\n",
-    "circ.draw()\n"
+    "circ.draw()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">     ┌─────────┐                                     \n",
+       "q_0: ┤ U2(0,π) ├──■──────────────────────────────────\n",
+       "     └─────────┘┌─┴─┐     ┌───┐         ┌───────────┐\n",
+       "q_1: ───────────┤ X ├──■──┤ H ├────■────┤ U(1,2,-2) ├\n",
+       "                └───┘┌─┴─┐└───┘┌───┴───┐└───┬───┬───┘\n",
+       "q_2: ────────────────┤ X ├─────┤ Rz(1) ├────┤ I ├────\n",
+       "                     └───┘     └───────┘    └───┘    </pre>"
+      ],
+      "text/plain": [
+       "     ┌─────────┐                                     \n",
+       "q_0: ┤ U2(0,π) ├──■──────────────────────────────────\n",
+       "     └─────────┘┌─┴─┐     ┌───┐         ┌───────────┐\n",
+       "q_1: ───────────┤ X ├──■──┤ H ├────■────┤ U(1,2,-2) ├\n",
+       "                └───┘┌─┴─┐└───┘┌───┴───┐└───┬───┬───┘\n",
+       "q_2: ────────────────┤ X ├─────┤ Rz(1) ├────┤ I ├────\n",
+       "                     └───┘     └───────┘    └───┘    "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "decomposed_circ = circ.decompose() # Does not modify original circuit\n",
+    "decomposed_circ.draw()"
    ]
   },
   {
@@ -138,7 +174,40 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"\"\"Parametrized circuits\"\"\"\n",
+    "\n",
+    "from qiskit.circuit import Parameter\n",
+    "\n",
+    "#on ajoute un paramêtre qui est theta\n",
+    "theta = Parameter('θ')\n",
+    "\n",
+    "n = 5\n",
+    "\n",
+    "#circuit quantique \n",
+    "qc = QuantumCircuit(5, 1)\n",
+    "\n",
+    "#application d'une porte hadamard\n",
+    "qc.h(0)\n",
+    "for i in range(n-1):\n",
+    "    qc.cx(i, i+1)\n",
+    "\n",
+    "#une barriere\n",
+    "qc.barrier()\n",
+    "\n",
+    "#rotation selon l'axe z\n",
+    "qc.rz(theta, range(5))\n",
+    "\n",
+    "#barrière\n",
+    "qc.barrier()\n",
+    "\n",
+    "for i in reversed(range(n-1)):\n",
+    "    qc.cx(i, i+1)\n",
+    "qc.h(0)\n",
+    "qc.measure(0, 0)\n",
+    "\n",
+    "qc.draw('mpl')\n"
+   ]
   }
  ],
  "metadata": {
